# cogent

./: .env.example  .gitignore  .mailmap  404.html  CHANGELOG.md  LICENSE  MIGRATION_v1.8.0.md  README.md  TASKBOARD.md  WORKBOARD.md  analyze_camelot.py  commit_msg.txt  demo_output.txt  flow_graph.mmd  mkdocs.yml  pyproject.toml  sitemap.xml  test_camelot.py  test_content.py  test_no_tool_hallucination.py  verify_tool_prompt.py
.github/: copilot-instructions.md
.github/workflows/: docs.yml  tests.yml
RESEARCH_FINDINGS/: index.html
acc/: index.html
agent/: index.html
capabilities/: index.html
context/: index.html
core/: index.html
docs/: README.md  RESEARCH_FINDINGS.md  a2a.md  acc.md  agent.md  caching.md  capabilities.md  context.md  core.md  document.md  events.md  executors.md  flow.md  getting-started.md  graph.md  index.md  interceptors.md  memory.md  models.md  observability.md  planned.md  quickstart.md  rag_architecture.md  reactive.md  reactors.md  resilience.md  retrievers.md  skills.md  streaming.md  subagents.md  tasks.md  tool-building.md  tool-composition.md  tools.md  topologies.md  transport.md  unified_flow.md  vectorstore.md
docs/api/: agents.md  index.md  observability.md  providers.md  topologies.md
document/: index.html
examples/: .env.example  01_basic_usage.py  02_topologies.py  03_flow.py  04_events.py  05_observability.py  06_memory.py  07_roles.py  08_mesh_writers.py  09_hierarchical_roles.py  10_agentic_rag.py  10_rag.py  11_supervisor_chat.py  12_knowledge_graph.py  13_codebase_analyzer.py  14_filesystem.py  15_web_search.py  16_code_sandbox.py  17_ssis_analyzer.py  18_human_in_the_loop.py  18_ssis_project_analysis.py  19_ssis_agent_analysis.py  19_streaming.py  20_human_in_the_loop.py  20_mcp.py  21_deferred_tools.py  21_streaming.py  22_mcp.py  22_rag_pipelines.py  23_pdf.py  23_rag_pipelines.py  23_spreadsheet.py  23_taskboard.py  24_pdf.py  24_structured_output.py  25_browser.py  25_interceptors.py  26_shell.py  28_reasoning.py  30_shell.py  (+31 more)
examples/advanced/: 01_human_in_the_loop.py  03_reasoning.py  04_interceptors.py  05_context_layer.py  a2a_delegation.py  a2a_tools.py  acc.py  acc_comparison.py  complex_task.py  content_review.py  context_handoff_demo.py  context_layer.py  context_propagation.py  deferred_tools.py  escalation_chain.py  executors_demo.py  hitl_approval.py  human_in_the_loop.py  interceptors.py  model_thinking.py  reactive_flow.py  reactive_webhook_jobs.py  reasoning.py  semantic_cache.py  semantic_cache_custom_tools.py  semantic_cache_demo.py  semantic_caching.py  single_vs_multi_agent.py  single_vs_multi_agent_gemini.py  single_vs_multi_etl.py  skills.py  subagent_coordinator.py  tactical_delegation.py  taskboard.py  test_agent_as_tool.py  tool_composition.py
examples/basics/: 02_memory.py  04_streaming.py  all_providers.py  bare_field_test.py  hello_world.py  literal_responses.py  memory.py  memory_layers.py  memory_semantic_search.py  pdf_html.py  response.py  role_behavior.py  role_configs.py  roles.py  simple_delegation.py  simple_models.py  streaming.py  structured_output.py  taskboard.py
examples/capabilities/: 02_codebase_analyzer.py  03_filesystem.py  04_web_search.py  06_ssis_analyzer.py  07_mcp.py  09_spreadsheet.py  10_shell.py  api_tester_agent_demo.py  browser.py  code_sandbox.py  codebase_analyzer.py  data_validator_demo.py  database_agent.py  database_agent_demo.py  database_demo.py  filesystem.py  http_agent.py  http_client_demo.py  kg_agent_viz.py  knowledge_graph.html  knowledge_graph.py  mcp.py  mcp_example.py  shell.py  spreadsheet.py  ssis_analyzer.py  transport.py  web_search.py  web_search_cached.py
examples/data/: company_knowledge.txt  smarthome_api.html  smarthome_config.json  smarthome_devices.py  smarthome_docs.md  the_secret_garden.txt
examples/diagrams/: 0_role_system.mmd  1_supervisor.mmd  2_pipeline.mmd  3_mesh.mmd  4_hierarchical.mmd  5_custom.mmd  5_single_autonomous.mmd  6_review_pattern.mmd  7_agentic_rag.mmd
examples/executors/: strategies.py  strategies_demo.py  tree_search.py  tree_search_demo.py
examples/flow/: checkpointing.py  checkpointing_demo.py  coordination_patterns.py  event_sources.py  flow_basics.py  pattern_syntax.py  reactive_checkpointing.py  source_filtering.py  source_groups.py  unified_flow.py
examples/graph/: README.md  graph_example.py  visualization_demo.py
examples/mcp_server/: search_server.py
examples/memory/: acc.py  acc_comparison.py  memory.py  memory_layers.py  semantic_cache.py
getting-started/: index.html
graph/: index.html
interceptors/: index.html
memory/: index.html
models/: index.html
observability/: index.html
observability_exports/: events.csv  events.json  events.jsonl
resilience/: index.html
retrievers/: index.html
scripts/: benchmark.py  benchmark_frameworks.py  multiagent_optimized.py  test_agent_functionality.py  test_all_models.py  test_core_agent.py  test_structured_agent.py
search/: search_index.json
skills/: index.html
streaming/: index.html
subagents/: index.html
tests/: __init__.py  test_a2a.py  test_acc.py  test_agent_response_integration.py  test_azure_auth.py  test_backends.py  test_capabilities.py  test_capabilities_extended.py  test_chat_message_serialization.py  test_checkpointer.py  test_code_sandbox.py  test_config_loader.py  test_context_propagation.py  test_context_strategies.py  test_coordination_patterns.py  test_core.py  test_deferred_tools.py  test_document.py  test_e2e_subagent.py  test_event_store.py  test_events.py  test_executor_subagent.py  test_executors.py  test_filesystem.py  test_flexible_model_inputs.py  test_flow_after_parameter.py  test_flow_patterns.py  test_graph.py  test_hitl.py  test_interceptors.py  test_mcp.py  test_memory.py  test_metadata_aggregation.py  test_middleware.py  test_model_integration.py  test_model_kwargs.py  test_model_registry.py  test_models.py  test_new_capabilities.py  test_observability.py  (+38 more)
tool-building/: index.html
tool-composition/: index.html
tools/: index.html
transport/: index.html
vectorstore/: index.html
(+787 files in other folders)
