[project]
name = "agenticflow"
version = "1.0.0"
description = "A production-grade multi-agent framework for building AI applications"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Milad Olad" }]
keywords = ["agents", "multi-agent", "event-driven", "llm", "ai", "orchestration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

dependencies = [
    # Core dependencies (required)
    "openai>=1.0.0",
    "httpx>=0.28.1",
    "networkx>=3.6",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.5",
    "pydantic-settings>=2.12.0",
    "ddgs>=9.9.1",
    "mcp>=1.22.0",
    "websockets>=15.0.1",
    "reportlab>=4.4.5",
    "pypdf>=6.4.0",
    "playwright>=1.56.0",
    "structlog>=25.5.0",
    "pymupdf4llm>=0.2.6",
    "pymupdf>=1.26.6",
    "pymupdf-layout>=1.26.6",
]

[project.optional-dependencies]
# Azure authentication
azure = ["azure-identity>=1.25.1"]
# Anthropic support
anthropic = ["anthropic>=0.40.0"]
# Google Gemini support
google = ["google-generativeai>=0.8.0"]
# Groq support
groq = ["groq>=0.15.0"]
# Web search capability
web = ["beautifulsoup4>=4.14.2", "ddgs>=9.9.1"]
# Benchmarking frameworks (for development/comparison)
benchmark = [
    "agno>=2.3.3",
    "crewai>=1.6.0",
    "openai-agents>=0.6.1",
]
websocket = ["websockets>=12.0"]
api = ["fastapi>=0.115.0", "uvicorn>=0.32.0"]
mcp = ["mcp>=1.0.0"]
all = [
    "azure-identity>=1.25.1",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "groq>=0.15.0",
    "beautifulsoup4>=4.14.2",
    "ddgs>=9.9.1",
    "websockets>=12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    # Include benchmark frameworks for development
    "agno>=2.3.3",
    "crewai>=1.6.0",
    "openai-agents>=0.6.1",
    "beautifulsoup4>=4.14.2",
    "ddgs>=9.9.1",
]
analytics = [
    "pyarrow>=22.0.0",
]

[project.scripts]
agenticflow = "agenticflow.cli:main"

[project.urls]
Homepage = "https://github.com/milad-o/agenticflow"
Repository = "https://github.com/milad-o/agenticflow"
Issues = "https://github.com/milad-o/agenticflow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenticflow"]

[tool.hatch.build.targets.sdist]
include = ["src/agenticflow", "README.md", "LICENSE"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agenticflow"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.44",
]
