[project]
name = "agenticflow"
version = "1.8.1"
description = "A production-grade multi-agent framework for building AI applications"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Milad Olad" }]
keywords = ["agents", "multi-agent", "event-driven", "llm", "ai", "orchestration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

dependencies = [
    # Core runtime
    "httpx>=0.28.1",
    "networkx>=3.6",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "structlog>=25.5.0",
    # LLM providers (bundled for zero-config)
    "azure-ai-inference>=1.0.0b9",
    "google-genai>=1.57.0",
    "openai>=1.0.0",
    "redis>=7.1.0",
]

[project.optional-dependencies]
# --- LLM Provider Extras ---
anthropic = ["anthropic>=0.40.0"]
azure = ["azure-identity>=1.25.1"]
cohere = ["cohere>=5.20.0"]
groq = ["groq>=0.15.0"]

# --- Capabilities ---
analytics = ["pyarrow>=22.0.0"]
api = ["fastapi>=0.115.0", "uvicorn>=0.32.0"]
browser = ["playwright>=1.56.0"]
document = [
    "pdfplumber>=0.11.8",
    "pypdf>=6.4.0",
    "pymupdf>=1.26.6",
    "pymupdf4llm>=0.2.6",
    "pymupdf-layout>=1.26.6",
    "reportlab>=4.4.5",
]
mcp = ["mcp>=1.22.0", "websockets>=15.0.1"]
web = ["beautifulsoup4>=4.14.2", "ddgs>=9.9.1"]

# --- Distributed & Infrastructure ---
redis = ["redis>=5.0.0"]
distributed = ["redis>=5.0.0"]  # Can extend with nats-py in future

# --- Bundles ---
all-providers = [
    "agenticflow[anthropic,azure,cohere,groq]",
]
all = [
    "agenticflow[all-providers,analytics,api,browser,document,mcp,web,distributed]",
]

# --- Benchmarking (for comparisons, not production) ---
benchmark = ["crewai>=1.6.0", "openai-agents>=0.6.1"]

[dependency-groups]
dev = [
    # Testing
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    # Linting & type-checking
    "mypy>=1.13.0",
    "ruff>=0.7.0",
    # Database (for tests)
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
agenticflow = "agenticflow.cli:main"

[project.urls]
Homepage = "https://github.com/milad-o/agenticflow"
Repository = "https://github.com/milad-o/agenticflow"
Issues = "https://github.com/milad-o/agenticflow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenticflow"]

[tool.hatch.build.targets.sdist]
include = ["src/agenticflow", "README.md", "LICENSE"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agenticflow"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
