[project]
name = "cogent"
version = "1.17.0"
description = "Production AI agent framework with memory control and semantic caching"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Milad Olad" }]
keywords = ["agents", "ai", "llm", "memory", "caching", "reasoning", "tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

dependencies = [
    # Core runtime
    "httpx>=0.28.1",
    "networkx>=3.6",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "structlog>=25.5.0",
    # LLM providers (bundled for zero-config)
    "azure-ai-inference>=1.0.0b9",
    "google-genai>=1.57.0",
    "openai>=1.0.0",
    "pymupdf>=1.26.6",
    "anthropic>=0.75.0",
    "ddgs>=9.9.1",
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4",
    "rapidfuzz>=3.14.3",
    "rank-bm25>=0.2.2",
    "cerebras-cloud-sdk>=1.64.1",
    "cohere>=5.20.0",
    "mcp>=1.22.0",
    "websockets>=15.0.1",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
    "faiss-cpu>=1.13.2",
    "scipy>=1.17.0",
    "asyncpg>=0.31.0",
    "pyvis>=0.3.2",
    "gravis>=0.1.0",
]

[project.optional-dependencies]
# --- LLM Provider Extras ---
anthropic = ["anthropic>=0.40.0"]
azure = ["azure-identity>=1.25.1"]
cohere = ["cohere>=5.20.0"]
groq = ["groq>=0.15.0"]

# --- Vector Stores & Retrieval ---
vector-stores = [
    "faiss-cpu>=1.13.2",
    "qdrant-client>=1.16.2",
]
retrieval = [
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
]

# --- Database & Infrastructure ---
database = [
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.21.0",
    "psycopg2-binary>=2.9.11",
]
infrastructure = [
    "redis>=5.0.0",
]

# --- Capabilities ---
analytics = ["pyarrow>=22.0.0"]
api = ["fastapi>=0.115.0", "uvicorn>=0.32.0"]
browser = ["playwright>=1.56.0"]
document = [
    "pdfplumber>=0.11.8",
    "pypdf>=6.4.0",
    "pymupdf>=1.26.6",
    "pymupdf4llm>=0.2.6",
    "pymupdf-layout>=1.26.6",
    "reportlab>=4.4.5",
]
mcp = ["mcp>=1.22.0", "websockets>=15.0.1"]
web = ["beautifulsoup4>=4.14.2", "ddgs>=9.9.1"]

# --- Data Visualization & Analysis ---
visualization = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
]

# --- Bundles for Easy Installation ---
all-providers = [
    "cogent[anthropic,azure,cohere,groq]",
]
all-backend = [
    "cogent[vector-stores,retrieval,database,infrastructure]",
]
all = [
    "cogent[all-providers,all-backend,analytics,api,browser,document,mcp,web]",
]

# --- Benchmarking (comparisons only, not for production) ---
benchmark = ["crewai>=1.6.0", "openai-agents>=0.6.1"]

[dependency-groups]
# --- Core Development Tools ---
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "genbadge[coverage,tests]>=1.1.3",
]

# --- Testing Tools ---
test = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
]

# --- Backend/Infrastructure Tests (optional dependencies for testing) ---
test-backends = [
    # Database backends
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.21.0",
    "psycopg2-binary>=2.9.11",
    # Vector stores
    "faiss-cpu>=1.13.2",
    "qdrant-client>=1.16.2",
    # Retrieval
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    # Infrastructure
    "redis>=5.0.0",
    # Web
    "beautifulsoup4>=4.14.2",
]

# --- Documentation Tools ---
docs = [
    "mkdocs-material>=9.7.1",
    "mkdocs-redirects>=1.2.2",
    "pymdown-extensions>=10.20",
    "ipykernel>=7.1.0",
]

# --- Notebook Tools ---
notebook = [
    "ipykernel>=7.1.0",
]

[project.scripts]
cogent = "cogent.cli:main"

[project.urls]
Homepage = "https://github.com/milad-o/cogent"
Repository = "https://github.com/milad-o/cogent"
Issues = "https://github.com/milad-o/cogent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cogent"]

[tool.hatch.build.targets.sdist]
include = ["src/cogent", "README.md", "LICENSE"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cogent"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
